--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <body>
         <h1>Twilight</h1>
+        <h1>An Excerpt from Chapter 13</h1>
+        <h2>Stephanie Meyer</h2>
 
 
     <div class="text">
