--- a/index.html
+++ b/index.html
@@ -20,35 +20,32 @@
         <h2>Stephanie Meyer</h2>
 
 
-    <div class="text">
-        <p>After ten incredibly long seconds, he walked back, slowly for him. He stopped, still several feet away,
-            and sank gracefully to the ground, crossing his legs. His eyes never left mine. He took two deep breaths, and then smiled in apology.
-            "I am so very sorry." He hesitated. "Would you understand what I meant if I said I was only human?"
-            I nodded once, not quite able to smile at his joke. Adrenaline pulsed through my veins as the realization
-            of danger slowly sank in. He could smell that from where he sat. His smile turned mocking.
-            "I'm the world's best predator, aren't I? Everything about me invites you in — my voice, my face, even my smell. As if I need any of that!" Unexpectedly, he was on his feet, bounding away, instantly out of sight, only to appear beneath the same tree as before, having circled the meadow in half a second.
-            "As if you could outrun me," he laughed bitterly.
-            He reached up with one hand and, with a deafening crack, effortlessly ripped a two-foot-thick branch
-            from the trunk of the spruce. He balanced it in that hand for a moment, and then threw it with blinding
-            speed, shattering it against another huge tree, which shook and trembled at the blow.
-            And he was in front of me again, standing two feet away, still as a stone.
-            "As if you could fight me off," he said gently. </p>
+    <div class="text"><p>After ten incredibly long seconds, he walked back, slowly for him. He stopped, still several feet away,
+        and sank gracefully to the ground, crossing his legs. His eyes never left mine. He took two deep breaths, and then smiled in apology.
+        "I am so very sorry." He hesitated. "Would you understand what I meant if I said I was only human?"
+        I nodded once, not quite able to smile at his joke. Adrenaline pulsed through my veins as the realization
+        of danger slowly sank in. He could smell that from where he sat. His smile turned mocking.
+        "I'm the world's best predator, aren't I? Everything about me invites you in — my voice, my face, even my smell. As if I need any of that!" Unexpectedly, he was on his feet, bounding away, instantly out of sight, only to appear beneath the same tree as before, having circled the meadow in half a second.
+        "As if you could outrun me," he laughed bitterly.
+        He reached up with one hand and, with a deafening crack, effortlessly ripped a two-foot-thick branch
+        from the trunk of the spruce. He balanced it in that hand for a moment, and then threw it with blinding
+        speed, shattering it against another huge tree, which shook and trembled at the blow.
+        And he was in front of me again, standing two feet away, still as a stone.
+        "As if you could fight me off," he said gently. </p>
 
-            <p>I sat without moving, more frightened of him than I had ever been. I'd never seen him so completely freed of that carefully cultivated facade. He'd never been less human… or more beautiful. Face ashen, eyes wide, I sat like a bird locked in the eyes of a snake.
-            His lovely eyes seem to glow with rash excitement. Then, as the seconds passed, they dimmed. His
-            expression slowly folded into a mask of ancient sadness.
-            "Don't be afraid," he murmured, his velvet voice unintentionally seductive. "I promise…" He hesitated.
-            "I swear not to hurt you." He seemed more concerned with convincing himself than me.
-            "Don't be afraid," he whispered again as he stepped closer, with exaggerated slowness. He sat sinuously, with deliberately unhurried movements, till our faces were on the same level, just a foot apart.
-            "Please forgive me," he said formally. "I can control myself. You caught me off guard. But I'm on my best behavior now."
-            He waited, but I still couldn't speak. </p>
-        </div>          
+        <p>I sat without moving, more frightened of him than I had ever been. I'd never seen him so completely freed of that carefully cultivated facade. He'd never been less human… or more beautiful. Face ashen, eyes wide, I sat like a bird locked in the eyes of a snake.
+        His lovely eyes seem to glow with rash excitement. Then, as the seconds passed, they dimmed. His
+        expression slowly folded into a mask of ancient sadness.
+        "Don't be afraid," he murmured, his velvet voice unintentionally seductive. "I promise…" He hesitated.
+        "I swear not to hurt you." He seemed more concerned with convincing himself than me.
+        "Don't be afraid," he whispered again as he stepped closer, with exaggerated slowness. He sat sinuously, with deliberately unhurried movements, till our faces were on the same level, just a foot apart.
+        "Please forgive me," he said formally. "I can control myself. You caught me off guard. But I'm on my best behavior now."
+        He waited, but I still couldn't speak. </p>
+           </div>
             
     <br><br>
 
     <a href="https://stepheniemeyer.com/the-twilight-saga/" target="_blank">Visit this Website to Read More!</a>
- 
 
     </body>
-
     </html>
