--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
   <html>
+    <head>
     <meta charset="utf-8">
     <meta name="viewport"
     content="width=device-width,
@@ -10,8 +11,12 @@
     <meta name="author"
     content="Amber Miller">
     <title><Exercise-6></Exercise-6></title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </html>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+</head>
+  
   
 
     <body>
