--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="author"
     content="Amber Miller">
     <title><Exercise-6></Exercise-6></title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 
 </head>
   
