--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     content="Amber Miller">
     <title><Exercise-6></Exercise-6></title>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 
 </head>
   
